--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/influxdb.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/influxdb.schema.yml
@@ -25,24 +25,19 @@ keys:
               type: str
             policy:
               type: str
-              description: Confiure data retention policy.
+              description: Data retention policy.
             url:
               type: str
-              description: Configure URL for the destination.
             username:
               type: str
-              description: Configure login details with destination.
             password:
               type: str
-              description: Assign login password
-            encryption:
+            password_type:
               type: str
               convert_types:
                 - int
-              description: |-
-                0: Indicates that keystring is not encrypted.
-                7: Speciefies that HIDDEN key will follow.
-                8a: Speciefies that AES-256-GCM encrypted key will follow.
+              valid_values: ["0", "7", "8a"]
+              default: "7"
       source_standard_enabled:
         type: bool
         description: Enable standard set of telemetry.
@@ -63,17 +58,16 @@ keys:
                 - str
             url:
               type: str
-              description: Configure socket URL.
       tags:
         type: list
         primary_key: name
-        description: Add extra tag to the telemetry output.
+        description: Extra tags added to the telemetry output.
         items:
           type: dict
           keys:
             name:
               type: str
-              description: Specify the key of the global tag pair.
+              description: Key of the global tag pair.
             value:
               type: str
-              description: Specify the value of the global tag pair.
+              description: Value of the global tag pair.
