--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/influxdb.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/influxdb.cfg
@@ -18,13 +18,13 @@ monitor telemetry influx
       database name test
       retention policy test
       vrf test
-      username test password test
+      username test password 7 071B245F5A
    destination influxdb test1
       url https://influx_test1.localhost
       database name test1
       retention policy test1
       vrf test
-      username test1 password 7 010703174F5A
+      username test1 password 7 131112011F5D
    source socket socket1
       url unix:///var/run/example2.sock
       connection limit 100
