--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/influxdb.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/influxdb.yml
@@ -6,14 +6,14 @@ influxdb:
       policy: test
       url: https://influx_test.localhost
       username: test
-      password: test
+      password: 071B245F5A
     - name: test1
       database: test1
       policy: test1
       url: https://influx_test1.localhost
       username: test1
-      password: 010703174F5A
-      encryption: 7
+      password: 131112011F5D
+      password_type: "7"
   source_standard_enabled: false
   source_sockets:
     - name: socket1
