--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-leaf1a.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-leaf1a.yml
@@ -57,12 +57,12 @@ router_bgp:
     description: dc1-spine2_Ethernet1
   - ip_address: 10.255.255.1
     peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65000'
+    remote_as: '65101'
     peer: dc1-wan1
     description: dc1-wan1_Ethernet1
   - ip_address: 10.255.255.5
     peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65000'
+    remote_as: '65101'
     peer: dc1-wan2
     description: dc1-wan2_Ethernet1
   - ip_address: 10.255.0.1
@@ -75,6 +75,9 @@ router_bgp:
     peer: dc1-spine2
     description: dc1-spine2
     remote_as: '65100'
+  - ip_address: 10.1.1.1
+    description: External peer
+    peer_group: EVPN-OVERLAY-PEERS
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
