Apply suggestions from code review
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -197,9 +197,17 @@ repos:
 
       - id: check-missing-schema-tables
         name: Catch schema tables not covered in docs
-        entry: find_missing_tables.py --table_files_glob "ansible_collections/arista/avd/roles/eos_cli_config_gen/docs/tables/*.md" --markdown_files_glob "ansible_collections/arista/avd/roles/eos_cli_config_gen/docs/*.md" --root_path "ansible_collections/arista/avd" --ignore_files "roles\eos_cli_config_gen\docs\tables\ip-tftp-client-source-interfaces.md"
+        entry: sh -c 'exec python-avd/scripts/find_missing_tables.py'
+        args:
+         - '--table_files_glob "ansible_collections/arista/avd/roles/eos_cli_config_gen/docs/tables/*.md"'
+         - '--markdown_files_glob "ansible_collections/arista/avd/roles/eos_cli_config_gen/docs/*.md"'
+         - '--table_files_glob "ansible_collections/arista/avd/roles/eos_designs/docs/tables/*.md"'
+         - '--markdown_files_glob "ansible_collections/arista/avd/roles/eos_designs/docs/*.md"'
+         - '--root_path "ansible_collections/arista/avd"'
+         - '--ignore_files "roles\eos_cli_config_gen\docs\tables\service-unsupported-transceiver.md"'
         language: system
-        files: ansible_collections/arista/avd/roles/eos_cli_config_gen/docs+/tables
+        files: ansible_collections/arista/avd/roles/[a-z_]+/docs
+        pass_filenames: false
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.1
