--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE2.cfg
@@ -243,9 +243,11 @@ router bgp 65001
    neighbor 172.31.255.67 description DC1-CL1B_Ethernet2
    neighbor 172.31.255.131 peer group UNDERLAY-PEERS
    neighbor 172.31.255.131 remote-as 65110
+   neighbor 172.31.255.131 shutdown
    neighbor 172.31.255.131 description DC1_UNDEPLOYED_LEAF1A_Ethernet50/1
    neighbor 172.31.255.163 peer group UNDERLAY-PEERS
    neighbor 172.31.255.163 remote-as 65111
+   neighbor 172.31.255.163 shutdown
    neighbor 172.31.255.163 description DC1_UNDEPLOYED_LEAF1B_Ethernet50/1
    neighbor 192.168.255.9 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.9 remote-as 65101
