--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE3.cfg
@@ -238,9 +238,11 @@ router bgp 65001
    neighbor 172.31.255.69 description DC1-CL1B_Ethernet3
    neighbor 172.31.255.133 peer group UNDERLAY-PEERS
    neighbor 172.31.255.133 remote-as 65110
+   neighbor 172.31.255.133 shutdown
    neighbor 172.31.255.133 description DC1_UNDEPLOYED_LEAF1A_Ethernet51/1
    neighbor 172.31.255.165 peer group UNDERLAY-PEERS
    neighbor 172.31.255.165 remote-as 65111
+   neighbor 172.31.255.165 shutdown
    neighbor 172.31.255.165 description DC1_UNDEPLOYED_LEAF1B_Ethernet51/1
    neighbor 192.168.255.9 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.9 remote-as 65101
