--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -156,44 +156,50 @@ repos:
       - id: docs-plugin-modules
         name: Build documentation for collection modules and action plugins
         entry: ansible-doc-extractor --template ansible_collections/arista/avd/docs/templates/plugin-docs.j2 --markdown "ansible_collections/arista/avd/docs/plugins/Modules_and_action_plugins/"
-        language: system
+        language: python
         types: [python]
+        additional_dependencies: [ansible-doc-extractor, "ansible-core>=2.14.0,<2.17.0"]
         files: ansible_collections/arista/avd/plugins/modules/
 
       - id: docs-plugin-filter
         name: Build documentation for collection filter plugins
         entry: ansible-doc-extractor --template ansible_collections/arista/avd/docs/templates/plugin-docs.j2 --markdown "ansible_collections/arista/avd/docs/plugins/Filter_plugins/"
-        language: system
+        language: python
         types: [python]
+        additional_dependencies: [ansible-doc-extractor, "ansible-core>=2.14.0,<2.17.0"]
         files: ansible_collections/arista/avd/plugins/filter/
 
       - id: docs-plugin-lookup
         name: Build documentation for collection lookup plugins
         entry: ansible-doc-extractor --template ansible_collections/arista/avd/docs/templates/plugin-docs.j2 --markdown "ansible_collections/arista/avd/docs/plugins/Lookup_plugins/"
-        language: system
+        language: python
         types: [python]
+        additional_dependencies: [ansible-doc-extractor, "ansible-core>=2.14.0,<2.17.0"]
         files: ansible_collections/arista/avd/plugins/lookup/
 
       - id: docs-plugin-test
         name: Build documentation for collection test plugins
         entry: ansible-doc-extractor --template ansible_collections/arista/avd/docs/templates/plugin-docs.j2 --markdown "ansible_collections/arista/avd/docs/plugins/Test_plugins/"
-        language: system
+        language: python
         types: [python]
+        additional_dependencies: [ansible-doc-extractor, "ansible-core>=2.14.0,<2.17.0"]
         files: ansible_collections/arista/avd/plugins/test/
 
       - id: docs-plugin-vars
         name: Build documentation for collection var plugins
         entry: ansible-doc-extractor --template ansible_collections/arista/avd/docs/templates/plugin-docs.j2 --markdown "ansible_collections/arista/avd/docs/plugins/Vars_plugins/"
-        language: system
+        language: python
         types: [python]
+        additional_dependencies: [ansible-doc-extractor, "ansible-core>=2.14.0,<2.17.0"]
         files: ansible_collections/arista/avd/plugins/vars/
 
       - id: schemas
         name: Build AVD Schemas and Docs
         entry: sh -c 'exec python-avd/scripts/build-schemas.py'
-        language: system
+        language: python
         files: ansible_collections/arista/avd/roles/[a-z_]+/schemas
         pass_filenames: false
+        additional_dependencies: [deepmerge, pyyaml, pydantic, jsonschema, pyavd]
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.39.0
