--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2B.cfg
@@ -258,16 +258,11 @@ router bgp 65107
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       no neighbor IPVPN-INTERWORKING-PEERS activate
-      neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_In_Test_1 in
-      neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_Out_Test_1 out
-      neighbor Tenant_C_AFIPv4_PG_2 activate
-      neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_IN in
-      neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_OUT out
-      neighbor Tenant_C_AFIPv4_PG_3 activate
       neighbor UNDERLAY-PEERS activate
+      neighbor VRF_Tenant_C_AFIPv4_PG_1 activate
    !
    address-family ipv6
-      no neighbor Tenant_C_AFPv6_PG_2 activate
+      neighbor VRF_Tenant_C_AFIPv6_PG_1 activate
    !
    address-family vpn-ipv4
       domain identifier 65000:4
