--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard.schema.yml
@@ -42,6 +42,8 @@ keys:
               tcp_udp_checksum:
                 type: int
                 description: Configure TCP/UDP checksum or IP ID checksum.
+                min: 0
+                max: 65535
                 convert_types:
                 - str
       profiles:
