--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7003,6 +7003,8 @@ keys:
               tcp_udp_checksum:
                 type: int
                 description: Configure TCP/UDP checksum or IP ID checksum.
+                min: 0
+                max: 65535
                 convert_types:
                 - str
       profiles:
