Fix(eos_designs): Inband ztp works with inband_mgmt_ip key (#3908)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-vrf.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-vrf.cfg
@@ -49,6 +49,15 @@ interface Port-Channel23
    switchport trunk allowed vlan 103
    switchport mode trunk
 !
+interface Port-Channel101
+   description INBAND-MGMT-MLAG-TEST_Po1
+   no shutdown
+   switchport
+   switchport trunk allowed vlan 101
+   switchport mode trunk
+   port-channel lacp fallback timeout 30
+   port-channel lacp fallback individual
+!
 interface Ethernet21
    description INBAND-MGMT-SUBNET_Ethernet2
    no shutdown
@@ -67,6 +76,20 @@ interface Ethernet23
    description INBAND-MGMT-IP_Ethernet2
    no shutdown
    channel-group 23 mode active
+!
+interface Ethernet101
+   description INBAND-MGMT-MLAG-A_Ethernet2
+   no shutdown
+   switchport access vlan 101
+   switchport mode access
+   channel-group 101 mode active
+!
+interface Ethernet102
+   description INBAND-MGMT-MLAG-B_Ethernet2
+   no shutdown
+   switchport access vlan 101
+   switchport mode access
+   channel-group 101 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
