--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3741,9 +3741,9 @@ keys:
               description: InfluxDB connection name.
             database:
               type: str
-            policy:
+              description: Set name of the database.
+            data_retention_policy:
               type: str
-              description: Data retention policy.
             url:
               type: str
             username:
