--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/TEST-MGMT-GATEWAY-IN-NODE-GROUP.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/TEST-MGMT-GATEWAY-IN-NODE-GROUP.cfg
@@ -6,7 +6,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname mgmt_interface_description
+hostname TEST-MGMT-GATEWAY-IN-NODE-GROUP
 !
 no enable password
 no aaa root
@@ -14,13 +14,17 @@ no aaa root
 vrf instance MGMT
 !
 interface Management1
-   description Custom Management Interface Description
+   description oob_management
    no shutdown
    vrf MGMT
-   ip address 1.1.1.2/24
+   ip address 192.168.201.202/24
+   ipv6 enable
+   ipv6 address 2001:db8::105/64
 no ip routing vrf MGMT
 !
-ip route vrf MGMT 0.0.0.0/0 1.1.1.254
+ip route vrf MGMT 0.0.0.0/0 192.168.201.254
+!
+ipv6 route vrf MGMT ::/0 2001:db8::2
 !
 management api http-commands
    protocol https
