--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/mgmt_interface_description.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/mgmt_interface_description.yml
@@ -7,5 +7,6 @@ l2leaf:
   defaults:
   nodes:
     - name: mgmt_interface_description
-      mgmt_ip: 1.1.1.2
+      mgmt_ip: 1.1.1.2/24
+      mgmt_gateway: 1.1.1.254
       id: 102
