--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -331,6 +331,9 @@ all:
             inband-mgmt-ipv6-only-vrf:
             inband-mgmt-mlag-a:
             inband-mgmt-mlag-b:
+        MGMT_GATEWAY_TESTS:
+          hosts:
+            TEST-MGMT-GATEWAY-IN-NODE-GROUP:
         WAN_TESTS:
           children:
             AUTOVPN_TESTS:
