--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-spine1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-spine1.yml
@@ -59,6 +59,7 @@ router_bgp:
     remote_as: '65102'
     peer: dc1-leaf2b
     description: dc1-leaf2b_Ethernet1
+    shutdown: true
   - ip_address: 10.33.255.17
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65133'
