Fix(eos_cli_config_gen): Remove requirement for original_ip to be unique under interface IP NAT (#3900)
Co-authored-by: Claus Holbech <holbech@arista.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/defs_interface_ip_nat_static.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/defs_interface_ip_nat_static.schema.yml
@@ -8,7 +8,6 @@ type: dict
 $defs:
   interface_ip_nat_static:
     type: list
-    primary_key: original_ip
     items:
       type: dict
       keys:
@@ -32,9 +31,10 @@ $defs:
           description: "'access_list' and 'group' are mutual exclusive."
         original_ip:
           type: str
-          description: IPv4 address.
+          description: IPv4 address. The combination of `original_ip` and `original_port` must be unique.
         original_port:
           type: int
+          description: TCP/UDP port. The combination of `original_ip` and `original_port` must be unique.
           convert_types:
             - str
           min: 1
