--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -16760,7 +16760,6 @@ $defs:
             $ref: eos_cli_config_gen#/$defs/interface_ip_nat_static
   interface_ip_nat_static:
     type: list
-    primary_key: original_ip
     items:
       type: dict
       keys:
@@ -16790,9 +16789,12 @@ $defs:
           description: '''access_list'' and ''group'' are mutual exclusive.'
         original_ip:
           type: str
-          description: IPv4 address.
+          description: IPv4 address. The combination of `original_ip` and `original_port`
+            must be unique.
         original_port:
           type: int
+          description: TCP/UDP port. The combination of `original_ip` and `original_port`
+            must be unique.
           convert_types:
           - str
           min: 1
