Feat(eos_designs): Add optional cv-pathfinder site for pathfinders (#3904)

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1258,8 +1258,9 @@ $defs:
             type: str
             description: |-
               The CV Pathfinder site name.
-              This key is required for WAN routers but ignored for pathfinders.
-              The site name must be defined for the relevant region under 'cv_pathfinder_regions'.
+              This key is required for WAN routers but optional for pathfinders.
+              For WAN routers and pathfinders with `cv_pathfinder_region`, the site name must be defined for the relevant region under 'cv_pathfinder_regions'.
+              For pathfinders without `cv_pathfinder_region` set, the site must be defined under `cv_pathfinder_global_sites`.
           wan_ha:
             documentation_options:
               table: node-type-wan-configuration
