--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -109,6 +109,11 @@ router_bgp:
     route:
       import_ethernet_segment_ip_mass_withdraw: true
       export_ethernet_segment_ip_mass_withdraw: true
+      import_overlay_index_gateway: true
+    bgp_additional_paths:
+      receive: true
+      send:
+        any: true
   address_family_ipv4:
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
