--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/influxdb.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/influxdb.schema.yml
@@ -38,9 +38,9 @@ keys:
                 - int
               valid_values: ["0", "7", "8a"]
               default: "7"
-      source_standard_enabled:
+      source_group_standard_disabled:
         type: bool
-        description: Enable standard set of telemetry.
+        description: Disable standard set of telemetry.
       source_sockets:
         type: list
         primary_key: name
