--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -5455,6 +5455,22 @@ keys:
                     min: 10
                     max: 65535
                     description: Logging interval in seconds.
+      level:
+        type: list
+        primary_key: facility_name
+        convert_types:
+        - dict
+        items:
+          type: dict
+          keys:
+            facility_name:
+              type: str
+              description: Facility name.
+            severity:
+              type: str
+              convert_types:
+              - int
+              description: Severity of facility.
   loopback_interfaces:
     type: list
     primary_key: name
