Upadating test for deprecated key

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/event-handlers.yml
@@ -8,6 +8,7 @@ event_handlers:
     action: FastCli -p 15 -c "clear bgp evpn host-flap"
     delay: 300
     trigger: on-logging
+    # Testing regex key which is deprecared and will be removed in 5.0.0
     regex: EVPN-3-BLACKLISTED_DUPLICATE_MAC
     asynchronous: true
   CONFIG_VERSIONING:
