Changing ip6 key to ipv6

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -55,7 +55,7 @@ event_handlers:
     trigger_on_intf:
       interface: Ethernet4
       ip: true
-      ip6: true
+      ipv6: true
       operstatus: true
     action_type: bash
     action: echo "on-intf"
