--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3361,8 +3361,8 @@ keys:
           type: dict
           description: 'Trigger condition occurs on specified interface changes.
 
-            Note: Any one of the `ip`, `ip6` and `operstatus` key needs to be defined
-            with the `interface`'
+            Note: Any one of the `ip`, `ipv6` and `operstatus` key needs to be defined
+            along with the `interface`.'
           keys:
             interface:
               type: str
@@ -3373,9 +3373,9 @@ keys:
               type: bool
               description: Action is triggered upon changes to interface IP address
                 assignment.
-            ip6:
+            ipv6:
               type: bool
-              description: Action is triggered upon changes to interface ip6 address
+              description: Action is triggered upon changes to interface ipv6 address
                 assignment.
             operstatus:
               type: bool
