Fix(eos_cli_config_gen): Render access vlan on port-channel interfaces if mode is dot1q-tunnel

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -367,6 +367,7 @@ interface Port-Channel130
 interface Port-Channel131
    description dot1q-tunnel mode
    switchport
+   switchport access vlan 115
    switchport mode dot1q-tunnel
 !
 interface Ethernet3
