--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -451,6 +451,7 @@ port_channel_interfaces:
     description: dot1q-tunnel mode
     type: switched
     mode: dot1q-tunnel
+    vlans: 115
 
 
 # Children interfaces
