--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
@@ -175,6 +175,7 @@ router bgp 65000
    neighbor WAN-RR-OVERLAY-PEERS peer group
    neighbor WAN-RR-OVERLAY-PEERS remote-as 65000
    neighbor WAN-RR-OVERLAY-PEERS update-source Dps1
+   neighbor WAN-RR-OVERLAY-PEERS route-reflector-client
    neighbor WAN-RR-OVERLAY-PEERS bfd
    neighbor WAN-RR-OVERLAY-PEERS bfd interval 1000 min-rx 1000 multiplier 10
    neighbor WAN-RR-OVERLAY-PEERS ttl maximum-hops 1
