Fix: update logic in monitor session template

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3A.cfg
@@ -869,6 +869,7 @@ monitor session MonitoringSessionServer18WithDest rate-limit per-ingress-chip 30
 monitor session MonitoringSessionServer18WithDest rate-limit per-egress-chip 30 bps
 monitor session MonitoringSessionServer18WithDest sample 10
 monitor session MonitoringSessionServer18WithDest truncate size 20
+monitor session MonitoringSessionServer18WithoutDest source Ethernet25 tx
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.255.0/24 eq 32
