--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
@@ -15,6 +15,18 @@ keys:
       The sFlow process will only be configured if any interface is enabled for sFlow.
       For default enabling of sFlow for various interface types across the fabric see `fabric_sflow`.
     keys:
+      sample:
+        type: dict
+        keys:
+          rate:
+            type: int
+            convert_types:
+              - str
+            min: 1
+            max: 4294967295
+            description: |-
+              Packet sampling rate that defines the average number of ingress packets that pass through an interface for every packet that is sampled.
+              A rate of 16384 corresponds to an average sample of one per 16384 packets.
       destinations:
         type: list
         items:
