--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11187,13 +11187,21 @@ keys:
               keys:
                 source_protocol:
                   type: str
+                route_map:
+                  type: str
                 include_leaked:
                   type: bool
                 rcf:
                   type: str
                   description: 'RCF function name with parenthesis.
 
-                    Example: MyFunction(myarg).'
+                    Example: MyFunction(myarg).
+
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes
+                    precedence.
+
+                    Only used if `source_protocol` is one of `connected`, `static`,
+                    `isis`, `user`, `dynamic`.'
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -11386,7 +11394,13 @@ keys:
                   type: str
                   description: 'RCF function name with parenthesis.
 
-                    Example: MyFunction(myarg).'
+                    Example: MyFunction(myarg).
+
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes
+                    precedence.
+
+                    Only used if `source_protocol` is one of `connected`, `static`,
+                    `isis`, `user`, `dynamic`.'
       address_family_ipv6_multicast:
         type: dict
         keys:
