--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1244,6 +1244,8 @@ keys:
               keys:
                 source_protocol:
                   type: str
+                route_map:
+                  type: str
                 include_leaked:
                   type: bool
                 rcf:
@@ -1251,6 +1253,8 @@ keys:
                   description: |-
                     RCF function name with parenthesis.
                     Example: MyFunction(myarg).
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                    Only used if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -1444,6 +1448,8 @@ keys:
                   description: |-
                     RCF function name with parenthesis.
                     Example: MyFunction(myarg).
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                    Only used if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
       address_family_ipv6_multicast:
         type: dict
         keys:
