adding ip and ipv6 dhcp relay knobs

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -57,6 +57,7 @@ ip-radius-source-interface
 ip-tacacs-source-interface
 ip-client-source-interfaces
 ipv6-access-lists
+ipv6-dhcp-relay
 ipv6-static-routes
 l2-protocol-forwarding
 lacp
