--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ipv6-dhcp-relay.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ipv6-dhcp-relay.cfg
@@ -1,12 +1,8 @@
 !RANCID-CONTENT-TYPE: arista
 !
-ip dhcp relay information option
-ip dhcp relay always-on
-ip dhcp relay all-subnets default
-!
 transceiver qsfp default-mode 4x10G
 !
-hostname ip-dhcp-relay
+hostname ipv6-dhcp-relay
 !
 no enable password
 no aaa root
